--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 
 .center {
   transform: translate(-50%, -50%);
